# server-old

./: .all-contributorsrc  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
migrations/2022-09-30-091712_ideas/: down.sql  up.sql
prisma/: schema.prisma
prisma/migrations/20221013094817_test_migration/: migration.sql
src/: boxes.rs  data.rs  database.rs  ideas.rs  init.rs  lib.rs  main.rs  mod.rs  models.rs  routes.rs  schema.rs  utils.rs
src/routes/: auth.rs  boxes.rs  mod.rs
