[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum={version="0.6.0-rc.2" , features = ["cookie"]}
diesel={version="2.0.0", features = ["postgres", "chrono"]}
dotenvy="0.15.5"
chrono="0.4.22"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }