[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run="server"

[dependencies]
log="0.4"
rand="0.8.5"
chrono="0.4.22"
dotenvy="0.15.5"
openssl = "0.10.28"
serde_json = "1.0.68"
axum={version="0.5.16"}
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum-extra = {version="0.3.7", features=["cookie"]}
jsonwebtoken = {version = "8", default-features = false }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
